--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       <div class="card"  id="middlecard" >
 
         <p>
-          <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapse2">
+          <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapse2" id="btn1">
             Projects
           </a>
-          <button class="btn btn-primary" type="button" href="#collapse2" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapseExample">
+          <button class="btn btn-primary" type="button" href="#collapse2" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapseExample" id="btn1">
             Contact me
           </button>
         </p>
